Fix a bug in the doc HTML layout where the top menu would be hidden behind the side nav

--- a/pdi/docs/_template/style.css
+++ b/pdi/docs/_template/style.css
@@ -1142,6 +1142,7 @@ body > div:first-of-type
 	width: 67rem;
 	padding: 0;
 	margin: 0;
+	z-index: 100;
 }
 
 a[id]
